# Finance-Tracker

./: .env.example  .gitignore  LICENSE  README.md  index.html  pyproject.toml  run.py  start.bat
database/: finance_tracker_demo.sqlite3  schema.sql
design-system/personal-finance-tracker/: MASTER.md
design-system/personal-finance-tracker/pages/: dashboard.md
docs/: API.md  DATABASE.md  IMPROVEMENT_BACKLOG.md  PUBLISHING.md
personal_finance_tracker/: __init__.py  config.py  models.py  routes.py  seed.py  services.py
personal_finance_tracker/static/css/: styles.css
personal_finance_tracker/static/js/: app.js
personal_finance_tracker/templates/: base.html  dashboard.html  index.html
scripts/: init_database.ps1  open_database.ps1  publish.ps1  start.ps1
tests/: conftest.py  test_api.py  test_services.py
